--- a/src/containers/LearnerDashboardHeader/index.scss
+++ b/src/containers/LearnerDashboardHeader/index.scss
@@ -27,7 +27,7 @@
   &:hover, &:focus, &.active, .expanded & {
     background: transparent !important;
     color: var(--pgn-color-neutral-900) !important;
-    border-bottom-color: #15376d !important;
+    border-bottom-color: #2F2F60 !important;
   }
 }
 
